# X-Pert

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test.py  test1.py  test2.py
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: requirements_pre.txt
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/notebooks/: create_chemical_data.nblink  create_cotrain_data.nblink  create_genetic_data.nblink  train_chemical_model.nblink  train_genetic_model.nblink  visualize_perturbverse.nblink
docs/source/tutorials/: 1_X-Pert_chemical_perturbation.ipynb  1_genetic_perturbation_data.ipynb  2_chemical_perturbation_data.ipynb  3_cotrain_perturbation_data.ipynb  plot_perturbverse.ipynb
examples/: README.md  basic_usage.py
examples/chemical_perturbation/: 1_X-Pert_chemical_perturbation.ipynb
examples/cotrain_perturbation/: 1_X-Pert_cotrain_perturbation.ipynb
examples/create_perturbation_data/: 1_genetic_perturbation_data.ipynb  2_chemical_perturbation_data.ipynb  3_cotrain_perturbation_data.ipynb
examples/genetic_perturbation/: 1_X-Pert_genetic_perturbation.ipynb
examples/unseen_perturbation_prediction/: scPerturb_scFlamingo_MultiPert_add-token.py
tests/: __init__.py  conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_analyzer.py  test_validation.py
xpert/: __init__.py
xpert/analysis/: __init__.py  analyzer.py
xpert/cli/: __init__.py  main.py
xpert/external_model/: __init__.py
xpert/external_model/gears/: __init__.py  inference.py
xpert/external_model/scgpt/: __init__.py  gene_tokenizer.py  util.py
xpert/loss/: __init__.py  loss.py
xpert/models/: __init__.py  base.py  cell_encoder.py  flamingo_func.py  generation_model.py  layers.py  model.py  perturbation_perceiver.py
xpert/utils/: __init__.py  util.py  utils.py  validation.py
xpert/visualization/: __init__.py
